# passtoken

./: .env.example  .gitignore  Cargo.toml  README.md
c_bindings/: Cargo.toml
c_bindings/src/: lib.rs
core/: Cargo.toml  sqlx-data.json
core/src/: auth.rs  error.rs  lib.rs  util.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
