[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "passtoken"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
core = { path = "./core" }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
