[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
redis = "0.22.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.21.2", features = [ "full" ] }

[build-dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.21.2", features = [ "full" ] }
